tests/src/frontend/syntax/invalid/lambda_named_parameter_modifiers.sk
fun main(): String {
  x = {private p} ~> p;
  x{"Fail"}
}
